--- a/source/_templates/layout.html
+++ b/source/_templates/layout.html
@@ -7,9 +7,9 @@
 
 {%- block sidebarlogo %}
 {{ super() }}
-    <ul>
+    <div class='extlinks'><ul>
       <li><a href="https://github.com/KDr2">Me on GitHub</a></li>
       <li><a href="/about.html">About This Site</a></li>
-    </ul>
+    </div></ul>
 {%- endblock %}
     
