--- a/source/_themes/r2d2/layout.html
+++ b/source/_themes/r2d2/layout.html
@@ -3,10 +3,9 @@
 {%- block extrahead %}
 <link rel="stylesheet" href="{{ pathto('_static/fonts.css', 1) }}" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
-<link rel="stylesheet" href="{{ pathto('_static/ie6.css', 1) }}" type="text/css" media="screen" charset="utf-8" />
+<script type="text/javascript" src="{{ pathto('_static/ie6.js', 1) }}"></script>
 <![endif]-->
 {% endblock %}
-
 
 {%- block sidebarsourcelink %}{%- endblock %}
 
