fix rss feed url typo in tumblr template

--- a/data/tumblr_theme_lightweight_mod.html
+++ b/data/tumblr_theme_lightweight_mod.html
@@ -7,7 +7,7 @@
     {block:Description}<meta name="description" content="{MetaDescription}" />{/block:Description}
     <link rel="shortcut icon" href="{Favicon}" />
     <link rel="apple-touch-icon" href="{PortraitURL-128}"/>
-    <link rel="alternate" type="application/rss+xml" href="http://kdr2.net.dev/service/feed/rss" />
+    <link rel="alternate" type="application/rss+xml" href="http://kdr2.net/service/feed/rss" />
 
     <!-- DEFAULT VARIABLES -->
     <meta name="text:Header Font Size" content="50px"/>
@@ -464,7 +464,7 @@
                             {block:AskEnabled}<li class="ask"><a href="/ask" class="page">{AskLabel}</a></li>{/block:AskEnabled}
                             {block:SubmissionsEnabled}<li class="submit"><a href="/submit" class="page">{SubmitLabel}</a></li>{/block:SubmissionsEnabled}
                             <li class="mobile"><a href="/mobile">Mobile</a></li>
-                            <li class="rss"><a href="http://kdr2.net.dev/service/feed/rss">RSS</a></li>
+                            <li class="rss"><a href="http://kdr2.net/service/feed/rss">RSS</a></li>
                         </ul>
                     </div><!-- #pages -->
                     <div id="search">
